
public class ChessBoard {

    Box[][] boxes;

    public ChessBoard() {
        boxes = new Box[8][8];
    }

    public void display() {

    }

}
