
public class Coordinate {

    public Coordinate(int row, int col) {
    }

}
