
public class Knight extends Piece {

    public Knight(int row, int col) {
        super(row, col);
    }

}
