
public class Pawn extends Piece {

    public Pawn(int col, int row) {
        super(row,col);
    }

}
