
public class Piece {

    Coordinate position;

    public Piece(int row, int col) {
        position = new Coordinate(row, col);
    }


}
