@startuml Chess - Polimorfismo
class Chess {

}

class Coordinate {

}

class Player {

}


class Pawn {
    
}

class King {

}

class Knight {

}

enum Color {

}

class Box {

}

class Game {

}

class Piece {

}

class ChessBoard {

}

class Console {

}

Chess --o Game

Player -.-> Console
Game -.left-> Console

Game --* ChessBoard
Game --* "2" Player

ChessBoard --* "64" Box
Box --* Coordinate
Box --* Color

Player --o "2" Knight
Player --o "1" King
Player --o "8" Pawn
Piece --> Box

King --|> Piece
Pawn --|> Piece
Knight --|> Piece

@enduml
